[package]
name = "echosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
thiserror = "2.0.18"
tracing = "0.1.37"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.8.8", features = ["http2", "query", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
